# observabilidade

./: .env.example  .gitignore  AGENTES.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.in  requirements.in
app/: main.py
app/core/: config.py  errors.py  logging.py  metrics.py  security.py  telemetry.py
app/middlewares/: logging.py  metrics.py  request_context.py  security_headers.py
app/routers/: health.py  system.py
app/schemas/: health.py
docker/alloy/: config.alloy  config.docker.alloy
docker/grafana/dashboards/: logs-erros.json  observabilidade-api.json
docker/grafana/provisioning/dashboards/: dashboards.yml
docker/grafana/provisioning/datasources/: prometheus.yml
docker/loki/: loki.yml
docker/prometheus/: prometheus.yml
docker/traefik/: dynamic.yml  traefik.yml
docs/: architecture.md  logs.md  metrics.md  operations.md  security.md  spring-boot-agent.md
tests/: test_app.py
